# rapt-ai

./: .gitignore  README.md  task.md  tem.py
api/: Dockerfile.api  main.py  pyproject.toml  requirements.txt
api/doc_handler/: document_retrieval.py  models.py
api/document_handler/: document_retrieval.py
api/models/: BotAssistantModel.py  ChatLLMModel.py  CrewRAGBotModel.py  OpenAIChatLLMModel.py  RagBotModel.py  bot_assistant.py  chat_llm.py
chat/: Dockerfile.web  README.md
deployment/: docker-compose.yml
rapt-ai-client/: README.md  package.json
rapt-ai-client/src/app/: layout.tsx  page.tsx
rapt-ai-client/src/components/: ClientProvider.tsx  RaptAppBar.tsx  SideMenu.tsx  UploadPdf.tsx
rapt-ai-client/src/lib/: apiSlice.ts  store.ts
rapt-ai-web/: app.py  chat.py  process.py  requirements.txt
rapt-gen-ai/: Dockerfile  README.md  database.py  main.py  requirements.txt
rapt-gen-ai/config/: config.ipynb  config.py
rapt-gen-ai/doc_handler/: document_retrieval.py
rapt-gen-ai/models/: Neo4jGraphModel.py  OpenAIChatLLMModel.py  RagBotModel.py
rapt-gen-ai/pdf_indexer/: indexer.py  models.py
rapt-gen-ai/services/: pinecone_service.ipynb  pinecone_service.py
