[tool.poetry]
name = "pdf-indexer"
version = "0.1.0"
description = "A tool for indexing PDF texts into Pinecone"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pinecone-client = "^2.2.1"
PyPDF2 = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

# pdf_indexer/requirements.txt
pinecone-client>=2.2.1
PyPDF2>=3.0.0
python-dotenv>=1.0.0
pytest>=7.3.1
pytest-cov>=4.1.0